# DooCore

./: .create_doxygen_and_deploy.sh  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  doxygen.conf  id_rsa_doocore.enc  install_version
TestWiese/: CMakeLists.txt
TestWiese/ReplaceScientificNotationInFiles/: CMakeLists.txt  ReplaceScientificNotationInFiles.cpp
TestWiese/TestEasyConfig/: CMakeLists.txt  TestEasyConfig.cpp  config.cfg
TestWiese/TestEasyTuple/: CMakeLists.txt  TestEasyTuple.cpp
TestWiese/TestKinematic/: CMakeLists.txt  TestKinematic.cpp
TestWiese/TestProgress/: CMakeLists.txt  TestProgress.cpp
TestWiese/TestStatistics/: CMakeLists.txt  TestStatistics.cpp
cmake/Modules/: FindGSL.cmake  FindROOT.cmake  rootcint_handler.py
doc/: doxygen_doc.h
examples/EasyConfig/: config.cfg  config2.cfg
scripts/: rebuild_cmake.sh
src/: CMakeLists.txt
src/doocore/: CMakeLists.txt
src/doocore/config/: CMakeLists.txt  EasyConfig.cpp  EasyConfig.h  Summary.cpp  Summary.h
src/doocore/io/: CMakeLists.txt  EasyTuple.cpp  EasyTuple.h  MsgStream.cpp  MsgStream.h  Progress.cpp  Progress.h  Tools.cpp  Tools.h
src/doocore/lutils/: CMakeLists.txt  lutils.cpp  lutils.h
src/doocore/physics/: CMakeLists.txt
src/doocore/physics/kinematic/: kinematic.cpp  kinematic.h
src/doocore/plot/: CMakeLists.txt  styles.cpp  styles.h
src/doocore/statistics/: CMakeLists.txt  general.cpp  general.h
src/doocore/statistics/montecarlo/: ErrorEstimator.cpp  ErrorEstimator.h
src/doocore/system/: CMakeLists.txt  FileLock.cpp  FileLock.h  Tools.cpp  Tools.h
src/effic2/: CMakeLists.txt
src/effic2/effic/: effic2.hpp  solvers.hpp  specfunc.hpp
src/effic2/src/: calceff2.cpp  effic2.cpp  solvers.cpp  specfunc.cpp
tests/: CMakeLists.txt  test_doocore.cpp
